fix scrollbar width

--- a/stylus/Flare/media-queries.styl
+++ b/stylus/Flare/media-queries.styl
@@ -206,7 +206,7 @@
 
     &.article-info
       position: fixed
-      right: 0.3em
+      right: 0.5em
       top: 4em
       height: 93%
       width: 25%
