--- a/stylus/Flare/structure.styl
+++ b/stylus/Flare/structure.styl
@@ -34,13 +34,13 @@ body
   margin: 0 auto
 
 ::-webkit-scrollbar
-  width: 0.35em
+  width: 0.5em
 
   &:horizontal
     display: none
 
 ::-webkit-scrollbar-track
-  background-color: $bordercolor
+  background-color: $white
 
 ::-webkit-scrollbar-thumb
-  background-color: $brandcolor
+  background-color: $brandaccent
